# expenses

./: Cargo.toml  Makefile  README.md  docker-compose.yml  index.html  main.js
backend/: Cargo.toml
backend/src/: reader.rs
backend/src/reader/: parser_first.rs  parser_second.rs  parser_third.rs
db/: createdb.sql
frontend/: Cargo.toml
resources/: index.html  main.js
src/: main.rs  reader.rs
src/backend/: lib.rs  main.rs  server.rs
src/backend/reader/: parsers.rs  types.rs
src/frontend/: app.rs
src/reader/: common.rs  parser_third.rs
